minor performance optimizations